--- a/core/src/main/res/values/ids.xml
+++ b/core/src/main/res/values/ids.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="fragment_container" type="id"/>
+    <item name="fragmentContainer" type="id"/>
 </resources>
